name:           caseus
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cronokirby/caseus#readme>
homepage:       https://github.com/cronokirby/caseus#readme
bug-reports:    https://github.com/cronokirby/caseus/issues
author:         Lúcás Meier
maintainer:     cronkirby@gmail.com
copyright:      2018 Lúcás Meier
license:        MIT
license-file:   LICENSE.md
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/cronokirby/caseus

library
  exposed-modules:
      Lib
    , CSV
    , CSVSpec
  other-modules:
      Paths_caseus
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , pipes
    , text
  default-language: Haskell2010

executable caseus-exe
  main-is: Main.hs
  other-modules:
      Paths_caseus
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , caseus
  default-language: Haskell2010

test-suite caseus-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_caseus
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , caseus
    , hspec
  default-language: Haskell2010
